# gamescope-adw

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: cd.yml  ci.yml
.zed/: debug.json
scripts/: install.sh  uninstall.sh
src/: args.rs  display.rs  gamescope.rs  lib.rs  main.rs  profiles.rs  settings.rs  ui.rs
src/ui/: window.blp
