[package]
name = "gamescope-gui"
version = "0.1.0"
edition = "2024"

[features]
default = ["gui"]
gui = ["dep:gtk", "gtk/blueprint", "dep:adw", "dep:which"]

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_5"], optional = true }
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
gtk = { package = "gtk4", version = "0.11.3", features = ["v4_14"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1.1.1"
thiserror = "2.0.17"
toml = "0.9.8"
which = { version = "8.0.0", optional = true }
xdg = "3.0.0"

[dev-dependencies]
tempfile = "3.23.0"
